# Nexus-ML

./: .gitignore  Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: autograd.rs  example_model.rs  io.rs  lib.rs  loss.rs  nn.rs  optim.rs  tensor.rs
tests/: autograd_test.rs  io_test.rs  nn_test.rs  training_test.rs
